--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@
             <div id="home-content">
                 <div id="text-1">Hello, my name is</div>
                 <div id="text-2">Itamar Junior</div>
-                <div id="text-3">I am a <span>Computer Science Student<br></span>
-                ... and a future Software Engineer</div>
+                <div id="text-3">I am a <span>Computer Science Student<br></span> ... and a future Software Engineer
+                </div>
                 <a href="#contact">Contact-me</a>
             </div>
         </div>
@@ -104,7 +104,7 @@
                                 <div class="text">
                                     Personal page v2.0
                                 </div>
-                                <p>If you want to have a look at the HMTL and CSS code of this page you can check on github.com/codeitamarjr/Blog <br/>*It is also available under the MIT License, so feel free to copy and modify as you want.</p>
+                                <p>If you want to have a look at the HMTL and CSS code of this page you can check on github.com/codeitamarjr/Blog <br />*It is also available under the MIT License, so feel free to copy and modify as you want.</p>
                             </div>
                         </a>
 
@@ -114,7 +114,7 @@
                                 <div class="text">
                                     Personal page v1.0
                                 </div>
-                                <p>This is my first personal page, a responsive page that I made with Bootstrap and custom CSS<br/>*It is also available under the MIT License, so feel free to copy and modify as you want.</p>
+                                <p>This is my first personal page, a responsive page that I made with Bootstrap and custom CSS<br />*It is also available under the MIT License, so feel free to copy and modify as you want.</p>
                             </div>
                         </a>
 
@@ -124,7 +124,8 @@
                                 <div class="text">
                                     Mochilando na Europa
                                 </div>
-                                <p>Personal blog which I talk about travel with tips and tricks about Ireland for Brazilians.</p>
+                                <p>Personal blog which I talk about travel with tips and tricks about Ireland for Brazilians.
+                                </p>
                                 <p>I use WordPress hosted on an EC2 by AWS, protected by Cloudfare.</p>
                             </div>
                         </a>
@@ -140,13 +141,25 @@
                             </div>
                         </a>
 
+                        <a href="http://sulseminovos.com.br" target="_blank">
+                            <div class="box">
+                                <img class="img" src="./assets/images/iconmonstr-code-2.svg" alt="Code icon">
+                                <div class="text">
+                                    Sul Seminovos
+                                </div>
+                                <p>This is a personal project which is a commercial website that I made to sell ads.</p>
+                                <p>I used WordPress hosted on an EC2 and, a CDN to improve the load balance.</p>
+                            </div>
+                        </a>
+
                         <a href="https://www.youtube.com/TIemDublin" target="_blank">
                             <div class="box">
                                 <img class="img" src="./assets/images/iconmonstr-youtube-1.svg" alt="Youtube">
                                 <div class="text">
                                     TI em Dublin
                                 </div>
-                                <p>This is my YouTube channel where I share my experiences living abroad, to help other peoples from my country, also share some tips and tricks about my Bsc. in Computing.</p>
+                                <p>This is my YouTube channel where I share my experiences living abroad, to help other peoples from my country, also share some tips and tricks about my Bsc. in Computing.
+                                </p>
                             </div>
                     </div>
                     </a>
@@ -163,17 +176,15 @@
                         <div class="text">
                             My Skills and Experiences in IT
                         </div>
-                        <p> I am learning Java and as you see I know something about UI technologies and frameworks such as Bootstrap, also CSS and HTML.<br/>
-                            I have knowledge about CMOS using a WordPress system for the last 4 years, web servers and how to
-                            set up a web environment, including shared and cloud hosting( EC2 on AWS) and experience with database systems like MySQL.<br/>
-                            Out of college I am learning data structure and also, how to Master Java on Coursera :D<br>
-                            I am using Visual Studio Code, although I also have IntelliJ, version control from GitHub and Bootstrap to helps me with others web projects.
-                            If you want to know more about me feel free to have a look at my Linkedin profile.</p>
+                        <p> I am learning Java and C# and as you see I know something about UI technologies and web development like CSS, HTML and, frameworks such as Bootstrap.<br /> I have knowledge about CMOS using WordPress for the last 5 years, web servers
+                            and how to set up a web environment, including shared and cloud hosting( EC2 on AWS) and experience with database systems such MySQL/Mariadb.<br /> Out of college I am learning data structure and also, how to Master Java on
+                            Coursera which I love :D<br> I am using Visual Studio Code and VS as IDE for my projects(Java, C#) and ATOM for HTML and CSS. To deal with version control I'm here using GitHub.<br> If you want to know more about me feel free
+                            to have a look at my Linkedin profile bellow.</p>
                         <a href="https://www.linkedin.com/in/itamarjr/" target="_blank">My Linkedin</a>
 
                     </div>
 
-                   
+
                 </div>
             </div>
         </section>
@@ -267,7 +278,8 @@
 
         <!--Footer section -->
         <footer>
-            <span>Created by <a href="mailto:hello@itjunior.dev">Itamar Junior</a> | <span> </span> 2021 All rights reserved.</span>
+            <span>Created by <a href="mailto:hello@itjunior.dev">Itamar Junior</a> | <span> </span> 2021 All rights reserved.
+            </span>
         </footer>
 
     </div>
