--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                         </div>
                         <p>
                             I am 33 years old and I moved from Brazil to Ireland in May of 2018 looking for new adventures, to learn a new language and thriving to grow my skills.
-                            <p>I am passionate about technology and I am in my first year of Computer Science studies at Dorset College in Dublin, although I am a freshman I already love to code!</p>
+                            <p>I am passionate about technology and I am in my second year of Computer Science studies at Dorset College in Dublin, although I am a freshman I already love to code!</p>
                             <p> I am a gamer and nerd, also I like to go to the gym, hang out with my friends and take some photos like a pro, feel free to check my Instagram. </p>
                             <p>I love to help my friends so my YouTube channel came to help me share everything that I know about Ireland for those who wish to come here, alike I have a blog( mochilandonaeuropa.com) about tips and tricks in Ireland for Brazilians.</p>
                             <p>Feel free to connect with me on my Linkedin</p>
@@ -178,8 +178,8 @@
                         </div>
                         <p> I am learning Java and C# and as you see I know something about UI technologies and web development like CSS, HTML and, frameworks such as Bootstrap.<br /> I have knowledge about CMOS using WordPress for the last 5 years, web servers
                             and how to set up a web environment, including shared and cloud hosting( EC2 on AWS) and experience with database systems such MySQL/Mariadb.<br /> Out of college I am learning data structure and also, how to Master Java on
-                            Coursera which I love :D<br> I am using Visual Studio Code and VS as IDE for my projects(Java, C#) and ATOM for HTML and CSS. To deal with version control I'm here using GitHub.<br> If you want to know more about me feel free
-                            to have a look at my Linkedin profile bellow.</p>
+                            Coursera which I love :D<br> I am using Visual Studio Code and VS as IDE for my projects(Java, C#) and ATOM for HTML and CSS. To deal with version control I'm here using GitHub.
+                            <br> If you want to know more about me feel free to have a look at my Linkedin profile bellow.</p>
                         <a href="https://www.linkedin.com/in/itamarjr/" target="_blank">My Linkedin</a>
 
                     </div>
@@ -196,6 +196,7 @@
         <section id="contact" class="contact">
             <div class="max-width">
                 <h2 class="title">Contact me</h2>
+
                 <div id="contact-content">
                     <div id="column" class="network">
                         <div class="text">Find me</div>
@@ -227,6 +228,17 @@
                                     </a>
                                 </div>
                             </div>
+
+                            <div class="row">
+                                <img src="./assets/images/moustache-icon.svg" alt="Moustache icon">
+                                <div class="info">
+                                    <a href="https://movember.com/m/14658090" target="_blank">
+                                        <div class="head">Movember</div>
+                                        <div class="subtitle">Help me and<br>Get involved</div>
+                                    </a>
+                                </div>
+                            </div>
+
                         </div>
 
                         <div class="icons-row2">
@@ -253,7 +265,7 @@
                                 <div class="info">
                                     <a href="https://www.facebook.com/ita.junior" target="_blank">
                                         <div class="head">Facebook</div>
-                                        <div class="subtitle">Facebook profile</div>
+                                        <div class="subtitle">Find-me on <br>Meta ;)</div>
                                     </a>
                                 </div>
                             </div>
