--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
                 <h2 class="title">Contact me</h2>
 
                 <div id="contact-content">
-                    <div id="column" class="network">
+                    <div id="column" class="contact-subtitle">
                         <div class="text">Find me</div>
                         <p>Feel free to get in touch also to connect with me on the networks bellow.</p>
 
