--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
                                 <div class="info">
                                     <a href="https://movember.com/m/14658090" target="_blank">
                                         <div class="head">Movember</div>
-                                        <div class="subtitle">Help me and<br>Get involved</div>
+                                        <div class="subtitle">Help me and<br>get involved</div>
                                     </a>
                                 </div>
                             </div>
