--- a/index.html
+++ b/index.html
@@ -12,6 +12,20 @@
     </title>
     <link rel="stylesheet" href="./assets/style.css">
     <link rel="icon" href="./assets/images/iconmonstr-code-2.svg" type="image/x-icon">
+
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-CY637CYK6W"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+
+        function gtag() {
+            dataLayer.push(arguments);
+        }
+        gtag('js', new Date());
+
+        gtag('config', 'G-CY637CYK6W');
+    </script>
+
 </head>
 
 <body>
