--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                 <h2 class="title">About me</h2>
                 <div id="about-content">
                     <div class="column-left">
-                        <img src="./assets/images/me.jpg" alt="My profile pic">
+                        <img src="./assets/images/me.webp" alt="My profile pic">
                     </div>
                     <div class="column-right">
                         <div class="text">
