add API project

--- a/index.html
+++ b/index.html
@@ -166,6 +166,18 @@
                             </div>
                         </a>
 
+                        <a href="https://rapidapi.com/codeitamarjr/api/climate-change-news48/" target="_blank">
+                            <div class="box">
+                                <img class="img" src="./assets/images/climate_change.png" alt="Climate Change">
+                                <div class="text">
+                                    Climate Change News
+                                </div>
+                                <p>An API showing the latest news about Climate Change, the result will be a JSon file.
+                                </p>
+                                More info you can find on my <a href="https://github.com/codeitamarjr/API-climate-change" target="_blank">GitHub Climate Change Page here</a>.
+                            </div>
+                        </a>
+
                         <a href="https://www.youtube.com/TIemDublin" target="_blank">
                             <div class="box">
                                 <img class="img" src="./assets/images/iconmonstr-youtube-1.svg" alt="Youtube">
@@ -175,8 +187,10 @@
                                 <p>This is my YouTube channel where I share my experiences living abroad, to help other peoples from my country, also share some tips and tricks about my Bsc. in Computing.
                                 </p>
                             </div>
+                        </a>
                     </div>
-                    </a>
+
+
                 </div>
             </div>
         </section>
