--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
                 <div id="contact-content">
                     <div id="column" class="contact-subtitle">
                         <div class="text">Find me<br></div>
-                        <p>Feel free to get in touch also to connect with me on the networks bellow.</p>
+                        <p>Feel free to get in touch also to connect with me on the networks bellow:</p>
 
                         <div class="icons-row1">
                             <div class="row">
