--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
             <div id="home-content">
                 <div id="text-1">Hello, my name is</div>
                 <div id="text-2">Itamar Junior</div>
-                <div id="text-3">I am a <span>Computer Science Student<br></span> ... and a future Software Engineer
+                <div id="text-3">I am a <span>Computer Science Student<br></span> ... and aspiring Software Engineer
                 </div>
                 <a href="#contact">Contact-me</a>
             </div>
