--- a/index.html
+++ b/index.html
@@ -95,8 +95,9 @@
                         <p>
                             I am 33 years old and I moved from Brazil to Ireland in May of 2018 looking for new adventures, to learn a new language and thriving to grow my skills.
                             <p>I am passionate about technology and I am in my second year of Computer Science studies at Dorset College in Dublin, although I am a freshman I already love to code!</p>
-                            <p> I am a gamer and nerd, also I like to go to the gym, hang out with my friends and take some photos like a pro, feel free to check my Instagram. </p>
-                            <p>I love to help my friends so my YouTube channel came to help me share everything that I know about Ireland for those who wish to come here, alike I have a blog( mochilandonaeuropa.com) about tips and tricks in Ireland for Brazilians.</p>
+                            <p> I am a gamer, also I like to go to the gym, hang out with my friends and take some photos like a pro so, feel free to check my Instagram on the Contact session. </p>
+                            <p>I love to help my friends so my YouTube channel came to help me share everything that I know about Ireland for those who wish to come here, alike I have a blog about tips and tricks in Ireland for Brazilians.</p>
+                            You can find all the links fpr my projects below on this page.
                             <p>Feel free to connect with me on my Linkedin</p>
                             <a href="https://www.linkedin.com/in/itamarjr/" target="_blank">My Linkedin</a>
                     </div>
@@ -227,8 +228,8 @@
 
                 <div id="contact-content">
                     <div id="column" class="contact-subtitle">
-                        <div class="text">Find me<br></div>
-                        <p>Feel free to get in touch also to connect with me on the networks bellow:</p>
+                        <br>
+                        <p>Find me:<br> Feel free to get in touch also to connect with me on the networks bellow:</p>
 
                         <div class="icons-row1">
                             <div class="row">
