--- a/index.html
+++ b/index.html
@@ -207,8 +207,8 @@
                         </div>
                         <p> I am learning Java and C# and as you see I know something about UI technologies and web development like CSS, HTML and, frameworks such as Bootstrap.<br /> I have knowledge about CMOS using WordPress for the last 5 years, web servers
                             and how to set up a web environment, including shared and cloud hosting( EC2 on AWS) and experience with database systems such MySQL/Mariadb; I'm also just about to landed in the Mobile Device World with Android Studio and
-                            learning how to build apps for Android.<br /> Out of college I am learning data structure and also, how to Master Java on Coursera which I love :D<br> I am using Visual Studio Code and VS as IDE for my projects(Java, C#) and
-                            ATOM for HTML and CSS. To deal with version control I'm here using GitHub.
+                            Kotlin, learning how to build apps for Android.<br /> Out of college I am learning data structure and also, how to Master Java on Coursera which I love :D<br> I am using Visual Studio Code and VS as IDE for my projects(Java,
+                            C#) and ATOM for HTML and CSS. To deal with version control I'm here using GitHub.
                             <br> If you want to know more about me feel free to have a look at my Linkedin profile bellow.</p>
                         <a href="https://www.linkedin.com/in/itamarjr/" target="_blank">My Linkedin</a>
 
