--- a/index.html
+++ b/index.html
@@ -179,6 +179,18 @@
                             </div>
                         </a>
 
+                        <a href="https://rapidapi.com/codeitamarjr/api/api-shopping" target="_blank">
+                            <div class="box">
+                                <img class="img" src="./assets/images/api-shopping.png" alt="Climate Change">
+                                <div class="text">
+                                    API-Shopping
+                                </div>
+                                <p>This is my second API, where the user can retrieve a JSON file with price of products from TESCO(ie).
+                                </p>
+                                More info you can find on my <a href="https://github.com/codeitamarjr/API-shopping" target="_blank">GitHub API-Shopping Page here</a>.
+                            </div>
+                        </a>
+
                         <a href="https://www.youtube.com/TIemDublin" target="_blank">
                             <div class="box">
                                 <img class="img" src="./assets/images/iconmonstr-youtube-1.svg" alt="Youtube">
