--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
 
         <section id="contact" class="contact">
             <div class="max-width">
-                <h2 class="title">Contact me</h2>
+                <h2 class="title">Contact me / Links</h2>
 
                 <div id="contact-content">
                     <div id="column" class="contact-subtitle">
