--- a/index.html
+++ b/index.html
@@ -45,7 +45,8 @@
                 <!-- Responsive menu  -->
                 <div class="responsive">
                     <a href="#menuresponsivo">
-                        <img class="menu-responvive-img" src="./assets/images/iconmonstr-menu-6.svg" alt="Menu responsive" width="30" height="30">
+                        <img class="menu-responvive-img" src="./assets/images/iconmonstr-menu-6.svg"
+                            alt="Menu responsive" width="30" height="30">
                     </a>
                     <a href="#click">
                         <div id="menuresponsivo">
@@ -90,16 +91,22 @@
                     </div>
                     <div class="column-right">
                         <div class="text">
-                            I am Itamar Junior and I am a <span>Computer Science</span> student at Dorset College in Dublin.
+                            I am Itamar Junior and I am a <span>Computer Science</span> student at Dorset College in
+                            Dublin.
                         </div>
                         <p>
-                            I am 33 years old and I moved from Brazil to Ireland in May of 2018 looking for new adventures, to learn a new language and thriving to grow my skills.
-                            <p>I am passionate about technology and I am in my second year of Computer Science studies at Dorset College in Dublin, although I am a freshman I already love to code!</p>
-                            <p> I am a gamer, also I like to go to the gym, hang out with my friends and take some photos like a pro so, feel free to check my Instagram on the Contact session. </p>
-                            <p>I love to help my friends so my YouTube channel came to help me share everything that I know about Ireland for those who wish to come here, alike I have a blog about tips and tricks in Ireland for Brazilians.</p>
-                            You can find all the links fpr my projects below on this page.
-                            <p>Feel free to connect with me on my Linkedin</p>
-                            <a href="https://www.linkedin.com/in/itamarjr/" target="_blank">My Linkedin</a>
+                            I am 33 years old and I moved from Brazil to Ireland in May of 2018 looking for new
+                            adventures, to learn a new language and thriving to grow my skills.
+                        <p>I am passionate about technology and I am in my second year of Computer Science studies at
+                            Dorset College in Dublin, although I am a freshman I already love to code!</p>
+                        <p> I am a gamer, also I like to go to the gym, hang out with my friends and take some photos
+                            like a pro so, feel free to check my Instagram on the Contact session. </p>
+                        <p>I love to help my friends so my YouTube channel came to help me share everything that I know
+                            about Ireland for those who wish to come here, alike I have a blog about tips and tricks in
+                            Ireland for Brazilians.</p>
+                        You can find all the links fpr my projects below on this page.
+                        <p>Feel free to connect with me on my Linkedin</p>
+                        <a href="https://www.linkedin.com/in/itamarjr/" target="_blank">My Linkedin</a>
                     </div>
                 </div>
             </div>
@@ -112,14 +119,15 @@
                 <div id="Projects-content">
 
                     <div id="card">
-
                         <a href="https://github.com/codeitamarjr/S2UXUIPersonalPage" target="_blank">
                             <div class="box">
                                 <img class="img" src="./assets/images/iconmonstr-code-2.svg" alt="Code icon">
                                 <div class="text">
                                     Personal page v2.0
                                 </div>
-                                <p>If you want to have a look at the HMTL and CSS code of this page you can check on github.com/codeitamarjr/Blog <br />*It is also available under the MIT License, so feel free to copy and modify as you want.</p>
+                                <p>If you want to have a look at the HMTL and CSS code of this page you can check on
+                                    github.com/codeitamarjr/Blog <br />*It is also available under the MIT License, so
+                                    feel free to copy and modify as you want.</p>
                             </div>
                         </a>
 
@@ -129,17 +137,21 @@
                                 <div class="text">
                                     Personal page v1.0
                                 </div>
-                                <p>This is my first personal page, a responsive page that I made with Bootstrap and custom CSS<br />*It is also available under the MIT License, so feel free to copy and modify as you want.</p>
+                                <p>This is my first personal page, a responsive page that I made with Bootstrap and
+                                    custom CSS<br />*It is also available under the MIT License, so feel free to copy
+                                    and modify as you want.</p>
                             </div>
                         </a>
 
                         <a href="http://mochilandonaeuropa.com/" target="_blank">
                             <div class="box">
-                                <img src="./assets/images/luck_icon.webp" alt="Icon code image" width="45px" height="45px">
+                                <img src="./assets/images/luck_icon.webp" alt="Icon code image" width="45px"
+                                    height="45px">
                                 <div class="text">
                                     Mochilando na Europa
                                 </div>
-                                <p>Personal blog which I talk about travel with tips and tricks about Ireland for Brazilians.
+                                <p>Personal blog which I talk about travel with tips and tricks about Ireland for
+                                    Brazilians.
                                 </p>
                                 <p>I use WordPress hosted on an EC2 by AWS, protected by Cloudfare.</p>
                             </div>
@@ -147,12 +159,14 @@
 
                         <a href="https://ijincorporadora.com.br/" target="_blank">
                             <div class="box">
-                                <img src="./assets/images/IJ_favicon-150x150.png" alt="Icon code image" width="75px" height="75px">
+                                <img src="./assets/images/IJ_favicon-150x150.png" alt="Icon code image" width="75px"
+                                    height="75px">
                                 <div class="text">
                                     IJ Incorporadora
                                 </div>
                                 <p>This is a commercial website that I made for a Building company IJ Incorporadora.</p>
-                                <p>I used WordPress hosted on Linux Shared Web Service to fit the budget and also the number of visits per month.</p>
+                                <p>I used WordPress hosted on Linux Shared Web Service to fit the budget and also the
+                                    number of visits per month.</p>
                             </div>
                         </a>
 
@@ -167,27 +181,27 @@
                             </div>
                         </a>
 
-                        <a href="https://rapidapi.com/codeitamarjr/api/climate-change-news48/" target="_blank">
+                        <a href="https://github.com/codeitamarjr/API-climate-change" target="_blank">
                             <div class="box">
-                                <img class="img" src="./assets/images/climate_change.png" alt="Climate Change">
+                                <img src="./assets/images/climate_change.png" alt="Climate Change" width="75px"
+                                    height="75px">
                                 <div class="text">
                                     Climate Change News
                                 </div>
                                 <p>An API showing the latest news about Climate Change, the result will be a JSon file.
                                 </p>
-                                More info you can find on my <a href="https://github.com/codeitamarjr/API-climate-change" target="_blank">GitHub Climate Change Page here</a>.
                             </div>
                         </a>
 
-                        <a href="https://rapidapi.com/codeitamarjr/api/api-shopping" target="_blank">
+                        <a href="https://github.com/codeitamarjr/API-shopping" target="_blank">
                             <div class="box">
                                 <img class="img" src="./assets/images/api-shopping.png" alt="Climate Change">
                                 <div class="text">
                                     API-Shopping
                                 </div>
-                                <p>This is my second API, where the user can retrieve a JSON file with price of products from TESCO(ie).
+                                <p>This is my second API, where the user can retrieve a JSON file with price of products
+                                    from TESCO(ie).
                                 </p>
-                                More info you can find on my <a href="https://github.com/codeitamarjr/API-shopping" target="_blank">GitHub API-Shopping Page here</a>.
                             </div>
                         </a>
 
@@ -197,13 +211,28 @@
                                 <div class="text">
                                     TI em Dublin
                                 </div>
-                                <p>This is my YouTube channel where I share my experiences living abroad, to help other peoples from my country, also share some tips and tricks about my Bsc. in Computing.
+                                <p>This is my YouTube channel where I share my experiences living abroad, to help other
+                                    peoples from my country, also share some tips and tricks about my Bsc. in Computing.
                                 </p>
                             </div>
                         </a>
+
+                        <a href="https://www.realenquiries.com/" target="_blank">
+                            <div class="box">
+                                <img class="img"
+                                    src="https://www.realenquiries.com/assets/logo_transparent_background.png"
+                                    alt="Real Enquiries" width="75px" height="75px">
+                                <div class="text">
+                                    Real Enquiries
+                                </div>
+                                <p>My latest and ambitious project, building a CRM focused on the rental market in
+                                    Ireland, the idea is to help the estate agents to manage the onboarding process,
+                                    dealing with Enquiries, Applications, Documents, Lease Agreements and more.
+                                </p>
+                            </div>
+                        </a>
+
                     </div>
-
-
                 </div>
             </div>
         </section>
@@ -217,16 +246,21 @@
                         <div class="text">
                             My Skills and Experiences in IT
                         </div>
-                        <p> I am learning Java and C# and as you see I know something about UI technologies and web development like CSS, HTML and, frameworks such as Bootstrap.<br /> I have knowledge about CMOS using WordPress for the last 5 years, web servers
-                            and how to set up a web environment, including shared and cloud hosting( EC2 on AWS) and experience with database systems such MySQL/Mariadb; I'm also just about to landed in the Mobile Device World with Android Studio and
-                            Kotlin, learning how to build apps for Android.<br /> Out of college I am learning data structure and also, how to Master Java on Coursera which I love :D<br> I am using Visual Studio Code and VS as IDE for my projects(Java,
+                        <p> I am learning Java and C# and as you see I know something about UI technologies and web
+                            development like CSS, HTML and, frameworks such as Bootstrap.<br /> I have knowledge about
+                            CMOS using WordPress for the last 5 years, web servers
+                            and how to set up a web environment, including shared and cloud hosting( EC2 on AWS) and
+                            experience with database systems such MySQL/Mariadb; I'm also just about to landed in the
+                            Mobile Device World with Android Studio and
+                            Kotlin, learning how to build apps for Android.<br /> Out of college I am learning data
+                            structure and also, how to Master Java on Coursera which I love :D<br> I am using Visual
+                            Studio Code and VS as IDE for my projects(Java,
                             C#) and ATOM for HTML and CSS. To deal with version control I'm here using GitHub.
-                            <br> If you want to know more about me feel free to have a look at my Linkedin profile bellow.</p>
+                            <br> If you want to know more about me feel free to have a look at my Linkedin profile
+                            bellow.
+                        </p>
                         <a href="https://www.linkedin.com/in/itamarjr/" target="_blank">My Linkedin</a>
-
                     </div>
-
-
                 </div>
             </div>
         </section>
@@ -332,7 +366,8 @@
 
         <!--Footer section -->
         <footer>
-            <span>Created by <a href="mailto:hello@itjunior.dev">Itamar Junior</a> | <span> </span> 2021 All rights reserved.
+            <span>Created by <a href="mailto:hello@itjunior.dev">Itamar Junior</a> | <span> </span> 2021 All rights
+                reserved.
             </span>
         </footer>
 
