Updated icons and sections.

--- a/index.html
+++ b/index.html
@@ -71,11 +71,11 @@
             <div id="home-content">
                 <div id="text-1">Hello, my name is</div>
                 <div id="text-2">Itamar Junior</div>
-                <div id="text-3">I am a <span>Computer Science Student<br></span> ... and aspiring Software Engineer
-                </div>
-                <a href="#contact">Contact-me</a>
+                <div id="text-3">I am a <span>Software Engineer<br></span> and a <span>Web Developer</span></div>
             </div>
+            <a href="#contact">Contact-me</a>
         </div>
+    </div>
     </div>
 
     <!--Main container to wrap all the content and activate the up scroll buttom -->
@@ -91,23 +91,38 @@
                     </div>
                     <div class="column-right">
                         <div class="text">
-                            I am Itamar Junior and I am a <span>Computer Science</span> student at Dorset College in
-                            Dublin.
+                            I am Itamar Junior, a proud graduate with a <span>BSc in Computing (with Honours of
+                                Distinction)</span> from Dorset College in Dublin.
                         </div>
                         <p>
-                            I am 33 years old and I moved from Brazil to Ireland in May of 2018 looking for new
-                            adventures, to learn a new language and thriving to grow my skills.
-                        <p>I am passionate about technology and I am in my second year of Computer Science studies at
-                            Dorset College in Dublin, although I am a freshman I already love to code!</p>
-                        <p> I am a gamer, also I like to go to the gym, hang out with my friends and take some photos
-                            like a pro so, feel free to check my Instagram on the Contact session. </p>
-                        <p>I love to help my friends so my YouTube channel came to help me share everything that I know
-                            about Ireland for those who wish to come here, alike I have a blog about tips and tricks in
-                            Ireland for Brazilians.</p>
-                        You can find all the links fpr my projects below on this page.
-                        <p>Feel free to connect with me on my Linkedin</p>
-                        <a href="https://www.linkedin.com/in/itamarjr/" target="_blank">My Linkedin</a>
+                            I am 34 years old, originally from Brazil. I relocated to Ireland in May of 2018 in search
+                            of new adventures, a deeper understanding of the English language, and opportunities to
+                            further hone my skills.
+                        </p>
+                        <p>
+                            My passion for technology is evident not just in my academic achievements but also in
+                            real-world applications. A project I worked on during my studies has been adopted and is now
+                            widely used by a prominent company.
+                        </p>
+                        <p>
+                            Outside of my professional endeavors, I am an avid gamer and enjoy keeping fit at the gym.
+                            Social connections matter to me, so I often spend time with friends and indulge in
+                            photography. To see some of my shots, do check out my Instagram link in the Contact section.
+                        </p>
+                        <p>
+                            To give back to the community and share my experiences, I've started a YouTube channel and a
+                            blog. Through these platforms, I provide insights about life in Ireland, especially catering
+                            to Brazilians interested in relocating here.
+                        </p>
+                        <p>
+                            All links to my projects and endeavors can be found below on this page.
+                        </p>
+                        <p>
+                            Let's connect! You can reach out to me on LinkedIn.
+                        </p>
+                        <a href="https://www.linkedin.com/in/itamarjr/" target="_blank">My LinkedIn Profile</a>
                     </div>
+
                 </div>
             </div>
         </section>
@@ -119,6 +134,23 @@
                 <div id="Projects-content">
 
                     <div id="card">
+
+                        <!-- My distinction -->
+                        <a href="#">
+                            <div class="box">
+                                <img class="img" src="./assets/images/iconmonstr-education-1.svg" alt="Graduation Cap">
+                                <div class="text">
+                                    BSc in Computing Honors
+                                </div>
+                                <p>
+                                    I graduated with Honors of Distinction from Dorset College, Dublin. My dedication to
+                                    Computer Science and my love for coding led me to achieve this significant
+                                    milestone.
+                                </p>
+                            </div>
+                        </a>
+
+
                         <a href="https://github.com/codeitamarjr/S2UXUIPersonalPage" target="_blank">
                             <div class="box">
                                 <img class="img" src="./assets/images/iconmonstr-code-2.svg" alt="Code icon">
@@ -219,15 +251,15 @@
 
                         <a href="https://www.realenquiries.com/" target="_blank">
                             <div class="box">
-                                <img class="img"
-                                    src="https://www.realenquiries.com/assets/logo_transparent_background.png"
+                                <img class="img" src="./assets/images/real_enquiries_logo-150x150.png"
                                     alt="Real Enquiries" width="75px" height="75px">
                                 <div class="text">
                                     Real Enquiries
                                 </div>
-                                <p>My latest and ambitious project, building a CRM focused on the rental market in
-                                    Ireland, the idea is to help the estate agents to manage the onboarding process,
-                                    dealing with Enquiries, Applications, Documents, Lease Agreements and more.
+                                <p>
+                                    My latest and most ambitious project. I developed a CRM focused on the rental market
+                                    in Ireland, aiming to streamline the estate agent's workflow from onboarding to
+                                    lease agreements.
                                 </p>
                             </div>
                         </a>
@@ -246,18 +278,30 @@
                         <div class="text">
                             My Skills and Experiences in IT
                         </div>
-                        <p> I am learning Java and C# and as you see I know something about UI technologies and web
-                            development like CSS, HTML and, frameworks such as Bootstrap.<br /> I have knowledge about
-                            CMOS using WordPress for the last 5 years, web servers
-                            and how to set up a web environment, including shared and cloud hosting( EC2 on AWS) and
-                            experience with database systems such MySQL/Mariadb; I'm also just about to landed in the
-                            Mobile Device World with Android Studio and
-                            Kotlin, learning how to build apps for Android.<br /> Out of college I am learning data
-                            structure and also, how to Master Java on Coursera which I love :D<br> I am using Visual
-                            Studio Code and VS as IDE for my projects(Java,
-                            C#) and ATOM for HTML and CSS. To deal with version control I'm here using GitHub.
-                            <br> If you want to know more about me feel free to have a look at my Linkedin profile
-                            bellow.
+                        <p>
+                            I have a strong foundation in web development, mastering technologies such as HTML, CSS, and
+                            frameworks like Bootstrap. My experience extends to utilizing CMS platforms, notably
+                            WordPress, for over five years. I am well-versed in setting up various web environments,
+                            from shared hosting to more advanced cloud solutions like AWS's EC2.
+                        </p>
+                        <p>
+                            Notably, during my BSc in Computing, I executed a project utilizing PHP and Laravel,
+                            complemented by AWS services like SES, EC2, and S3. I also ventured into the mobile
+                            development realm, publishing React Native apps that showcase my diverse skill set.
+                        </p>
+                        <p>
+                            Beyond web technologies, I am proficient in database systems such as MySQL/MariaDB. My
+                            journey into the mobile world includes working with Android Studio and Kotlin.
+                            Independently, I am broadening my horizons by studying data structures and mastering Java on
+                            Coursera, a learning platform I truly enjoy.
+                        </p>
+                        <p>
+                            My toolkit consists of IDEs such as Visual Studio Code for projects in Java and C#, and ATOM
+                            for web development. I rely on GitHub for version control, ensuring that my development
+                            process is smooth and collaborative.
+                        </p>
+                        <p>
+                            Keen to know more? Check out my LinkedIn profile below.
                         </p>
                         <a href="https://www.linkedin.com/in/itamarjr/" target="_blank">My Linkedin</a>
                     </div>
